cmake_minimum_required(VERSION 3.16)
project(leetcode_cpp)

set(CMAKE_CXX_STANDARD 11)

add_executable(leetcode_cpp main.cpp)
add_executable(fibonaci others/fibonacci.cpp)
add_executable(leetcode322 leetcode/leetcode322.cpp)
add_executable(leetcode46 leetcode/leetcode46.cpp)
add_executable(leetcode51 leetcode/leetcode51.cpp)
add_executable(bfs others/bfs.cpp)
add_executable(leetcode111 leetcode/leetcode111.cpp)
add_executable(leetcode752 leetcode/leetcode752.cpp)
add_executable(binarySearch others/binarySearch.cpp)
add_executable(leetcode76 leetcode/leetcode76.cpp)
add_executable(slidingWindow others/slidingWindow.cpp)
add_executable(leetcode567 leetcode/leetcode567.cpp)
add_executable(leetcode438 leetcode/leetcode438.cpp)
add_executable(leetcode3 leetcode/leetcode3.cpp)
add_executable(leetcode121 leetcode/leetcode121.cpp)
add_executable(leetcode122 leetcode/leetcode122.cpp)
add_executable(leetcode198 leetcode/leetcode198.cpp)
add_executable(leetcode213 leetcode/leetcode213.cpp)
add_executable(leetcode337 leetcode/leetcode337.cpp)
add_executable(leetcode53 leetcode/leetcode53.cpp)
add_executable(leetcode1143 leetcode/leetcode1143.cpp)

add_executable(leetcode72 leetcode/leetcode72.cpp)